[FIX] project_scrum: widget statusbar is now clickable

--- a/project_scrum/views/project_scrum_sprint.xml
+++ b/project_scrum/views/project_scrum_sprint.xml
@@ -39,6 +39,7 @@
                         string="State"
                         widget="statusbar"
                         clickable="True"
+                        options="{'clickable': 1}"
                     />
                 </header>
                 <sheet string="Sprint">
