--- a/project_scrum/views/project_scrum_test.xml
+++ b/project_scrum/views/project_scrum_test.xml
@@ -107,6 +107,7 @@
                         string="State"
                         widget="statusbar"
                         clickable="True"
+                        options="{'clickable': 1}"
                     />
                 </header>
                 <sheet string="Test Cases">
