--- a/project_scrum/views/project_scrum_sprint.xml
+++ b/project_scrum/views/project_scrum_sprint.xml
@@ -67,7 +67,7 @@
 
                     </button>
                     <group colspan="4" col="4">
-                        <field name="project_id" />
+                        <field name="project_id" domain="[('use_scrum', '=', True)]" />
                         <field name="planned_hours" widget="float_time" />
                     </group>
                     <group colspan="4" col="6">
