--- a/project_scrum/views/project_task.xml
+++ b/project_scrum/views/project_task.xml
@@ -5,11 +5,10 @@
         <field name="name">project.scrum.sprint.task</field>
         <field name="model">project.task</field>
         <field name="inherit_id" ref="project.view_task_search_form" />
-        <field name="mode">primary</field>
-        <field name="priority">99</field>
         <field name="arch" type="xml">
             <field name="project_id" position="after">
                 <field name="sprint_id" />
+                <field name="us_id" />
             </field>
             <filter name="project" position="after">
                 <filter
@@ -30,8 +29,6 @@
         <field name="name">project.scrum.task.form</field>
         <field name="model">project.task</field>
         <field name="inherit_id" ref="project.view_task_form2" />
-        <field name="mode">primary</field>
-        <field name="priority">99</field>
         <field name="arch" type="xml">
             <field name="date_deadline" position="before">
                 <field name="use_scrum" invisible="1" />
@@ -40,19 +37,21 @@
                     name="sprint_id"
                     context="{'default_project_id':project_id}"
                     domain="[('project_id', '=', project_id)]"
+                    attrs="{'invisible':[('use_scrum', '=', False)]}"
                 />
                 <field
                     string="User Story"
                     name="us_id"
                     context="{'default_project_id':project_id}"
                     domain="[('project_id', '=', project_id)]"
+                    attrs="{'invisible':[('use_scrum', '=', False)]}"
                 />
             </field>
             <field name="date_deadline" position="after">
-                <field name="moscow" />
-                <field name="value" />
-                <field name="risk" />
-                <field name="kano" />
+                <field name="moscow" attrs="{'invisible':[('use_scrum', '=', False)]}" />
+                <field name="value" attrs="{'invisible':[('use_scrum', '=', False)]}" />
+                <field name="risk" attrs="{'invisible':[('use_scrum', '=', False)]}" />
+                <field name="kano" attrs="{'invisible':[('use_scrum', '=', False)]}" />
             </field>
         </field>
     </record>
@@ -61,20 +60,23 @@
         <field name="name">project.scrum.task.tree</field>
         <field name="model">project.task</field>
         <field name="inherit_id" ref="project.view_task_tree2" />
-        <field name="mode">primary</field>
-        <field name="priority">99</field>
         <field name="arch" type="xml">
             <field name="stage_id" position="after">
+                <field
+                    name="use_scrum" invisible="1"
+                />
                 <field
                     string="Sprint"
                     name="sprint_id"
                     context="{'default_project_id':project_id}"
                     domain="[('project_id', '=', project_id)]"
+                    attrs="{'invisible':[('use_scrum', '=', False)]}"
                 />
                 <field
                     string="User Story"
                     name="us_id"
                     domain="[('project_id', '=', project_id)]"
+                    attrs="{'invisible':[('use_scrum', '=', False)]}"
                 />
             </field>
         </field>
@@ -96,8 +98,7 @@
         <field
             name="view_ids"
             eval="[(5, 0, 0),
-                (0, 0, {'view_mode': 'tree', 'view_id': ref('view_ps_sprint_task_tree2')}),
-                (0, 0, {'view_mode': 'form', 'view_id': ref('view_ps_sprint_task_form2')})]"
+                (0, 0, {'view_mode': 'tree', 'view_id': ref('view_ps_sprint_task_tree2')})]"
         />
     </record>
 
@@ -109,7 +110,6 @@
             {
             'search_default_sprint_id': [active_id],
             'default_sprint_id': active_id,
-            'search_default_filte_by_tag': 1,
             'active_test': False,
             }
         </field>
@@ -117,8 +117,7 @@
         <field
             name="view_ids"
             eval="[(5, 0, 0),
-                (0, 0, {'view_mode': 'tree', 'view_id': ref('view_ps_sprint_task_tree2')}),
-                (0, 0, {'view_mode': 'form', 'view_id': ref('view_ps_sprint_task_form2')})]"
+                (0, 0, {'view_mode': 'tree', 'view_id': ref('view_ps_sprint_task_tree2')})]"
         />
     </record>
 
@@ -130,8 +129,7 @@
         <field
             name="view_ids"
             eval="[(5, 0, 0),
-                   (0, 0, {'view_mode': 'tree', 'view_id': ref('view_ps_sprint_task_tree2')}),
-                   (0, 0, {'view_mode': 'form', 'view_id': ref('view_ps_sprint_task_form2')})]"
+                   (0, 0, {'view_mode': 'tree', 'view_id': ref('view_ps_sprint_task_tree2')})]"
         />
     </record>
 
